# MiceWine-Application

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  local.properties  settings.gradle  settings.gradle.kts
.androidide/editor/: openedFiles.json  openedFiles.json.bak
.github/workflows/: android.yml
app/: .gitignore  build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: .gitignore  loader.apk
app/src/main/cpp/: CMakeLists.txt  execCmdNative.cpp
app/src/main/cpp/includes/: calc.h
app/src/main/cpp/lorie/: InitOutput.c  activity.c  android.c  cmdentrypoint.c  dri3.c  lorie.h  renderer.c
app/src/main/cpp/micewine/: controller.c  shell_loader.c
app/src/main/cpp/recipes/: xserver.cmake
app/src/main/res/: values-zh-rTW
app/src/main/res/anim/: fade_in.xml  scale_down.xml  scale_up.xml  slide_in.xml  slide_out.xml
app/src/main/res/drawable-night/: a_button.xml  b_button.xml  dpad_down.xml  dpad_left.xml  dpad_right.xml  dpad_up.xml  ic_back.xml  ic_clear.xml  ic_delete.xml  ic_download.xml  ic_edit.xml  ic_folder.xml  ic_globe.xml  ic_info_outline.xml  ic_joystick.xml  ic_log.xml  ic_more_vert.xml  ic_next.xml  ic_settings.xml  ic_settings_outline.xml  ic_shortcut.xml  (+22 more)
app/stub/: build.gradle  build.gradle.kts
backup/shared/termux/extrakeys/: ExtraKeyButton.java  ExtraKeysConstants.java  ExtraKeysInfo.java  ExtraKeysView.java  SpecialButton.java  SpecialButtonState.java
shell-loader/: build.gradle
shell-loader/stub/: build.gradle
shell-loader/stub/src/main/: res
(+440 files in other folders)
